# yawaf

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  copy_config.sh  make.sh
.github/workflows/: docker-image.yml
config/: default.toml  log4rs.yaml
doc/diagrams/: activity_request.mmd  activity_response.mmd  sequence.mmd
environments/: docker-compose.yml
environments/modsecurity-crs-nginx-wordpress/: docker-compose.yml  nginx.conf
environments/modsecurity-dvwa/: docker-compose.yml
environments/yawaf-dvwa/: docker-compose.yml
rules/: dvwa_rules.conf
src/: main.rs  reverse_proxy.rs  rule.rs  rule_directive.rs  rule_variable.rs  waf.rs  waf_error.rs  waf_running_mode.rs  waf_settings.rs
src/engine/: learning_model_based_engine.rs  mod.rs  rule_based_engine.rs  waf_engine.rs  waf_engine_type.rs
src/injection/: injection_test.rs  mod.rs
src/rules_parser/: mod.rs  rule.rs  rule_action.rs  rule_directive.rs  rule_operator.rs  rule_variable.rs
