[package]
name = "yawaf"
version = "0.1.0"
authors = ["mcdobr <mircea.dobreanu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#warp = "0.2"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
yaml-rust = "0.4"
log = "0.4"
env_logger = "0.8"
nom = "6.1"
strum = "0.20"
strum_macros = "0.20"
itertools = "0.10"