[package]
name = "yawaf"
version = "0.1.0"
authors = ["mcdobr <mircea.dobreanu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.4", features = ["full"] }
futures = "0.3"
yaml-rust = "0.4"
log = "0.4"
env_logger = "0.8"
nom = "6.1"
strum = "0.20"
strum_macros = "0.20"
itertools = "0.10"