[package]
name = "yawaf"
version = "0.1.0"
authors = ["mcdobr <mircea.dobreanu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.4", features = ["full"] }
futures = "0.3"
yaml-rust = "0.4"
log = "0.4"
log4rs = { version = "1.0.0", features = ["json_encoder"] }
nom = "6.1"
strum = "0.20"
strum_macros = "0.20"
config = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
libinjection = "0.2"
bytes = "1.0.1"
regex = "1.5.4"
lazy_static = "1.4.0"
unicase = "2.6.0"
urlencoding = "2.0.0"
base64 = "0.13.0"
html-escape = "0.2.9"
async-trait = "0.1.50"
bytesize = "1.0.1"
onnxruntime = "0.0.12"